@startuml DiagrammaClassiChatList

class ChatListPage<<Player>>{
    +osservatore: String? {ReadOnly};
    +nomeCCN: String? {ReadOnly};
    
    +createState(): ChatListPageState;

}

class ChatListPageState<<Player>>{
    -currentUserId: String;
    -isSearching: bool=false;
    -searchController: TextEditingController{ReadOnly};
    -searchText: String="";
    
    +initState(): void;
    +dispose():void;
    +build(BuildContext context): Widget;
}

abstract StileChatListPage{
    ...
}

interface RuoloLista<<Role>>{
    +buildBottone(BuildContext context): Widget;
    +getColoreBackground(): Color;
    +getColoreIcone(): Color;
    +getTestoIntestazione(String? nomeUtente): Text;
    +getRuoloChatPage(): RuoloChat;
}

class RuoloListaMia<<Concrete role>>{

}

class RuoloListaTerzi<<Concrete role>>{

}

RuoloLista <|.. RuoloListaMia
RuoloLista <|.. RuoloListaTerzi
RuoloLista <--o ChatListPage
ChatListPageState <.. ChatListPage: <<crea>>
StileChatListPage <.. ChatListPageState: <<usa stili grafici>>


@enduml